--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,23 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 
+# ----------------
 # Custom
 .vsconfig
 
+# ----------------
+# Wwise
+.backup*
+.cache*
+*.akd
+*.prof
+*.validationcache
+*.wsettings
+AkWwiseProjectData.asset
+IncrementalSoundBankData.xml
+logRunSetup.txt
+
+# ----------------
 # Unity
 /[Ll]ibrary/
 /[Tt]emp/
